# LumaSalseModel_trail

./: CLAUDE.md  TEST_SUMMARY.md  USER_GUIDE.md  pyproject.toml  requirements.txt  run_constraint_tests.py  test_enhanced_model.py
lumasalsemodel_trail/: main.py  test_enhanced_sensitivity.py  test_fixes.py  test_simplified_model.py
lumasalsemodel_trail/archived/: app_original.py  sensitivity_original.py  simplified_business_model_page.py  strategy_optimizer_deprecated.py
lumasalsemodel_trail/docs/: app_restructure_notes.md  bug_fixes_summary.md  business_logic_corrections.md  business_model_restructure_plan.md  business_model_restructure_summary.md  enhanced_strategy_optimizer_algorithm_guide.md  optimization_implementation_summary.md  optimization_improvement_plan.md  optimization_test.py  sensitivity_module_restructure_summary.md  simplified_model_implementation_summary.md
lumasalsemodel_trail/luma_sales_model/: enhanced_financial_model.py  financial_model.py  simplified_financial_model.py
lumasalsemodel_trail/streamlit_app/: README.md  USER_GUIDE.md  app.py
lumasalsemodel_trail/streamlit_app/pages/: enhanced_business_model.py  enhanced_sensitivity.py  enhanced_strategy_optimizer.py  user_guide.py  visualization.py
lumasalsemodel_trail/streamlit_app/utils/: algorithm_selector.py  constraint_handler.py  enhanced_optimization.py  enhanced_parameter_ui.py  enhanced_plot_utils.py  enhanced_sensitivity_analysis.py  ensemble_optimizer.py  localization.py  optimization.py  optimization_monitor.py  parameter_ui.py  (+5 more)
tests/: test_realistic_constraints.py
