[project]
name = "lumasalsemodel-trail"
version = "0.1.0"
description = ""
authors = [
    {name = "dash",email = "chen.xibo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "lumasalsemodel_trail"}]
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "scikit-optimize (>=0.10.2,<0.11.0)",
    "deap (>=1.4.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
requests = "^2.32.4"
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

